objects/Purchase_Item__c.object
<CustomObject>
    <description>Retail IDO Custom Object</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>Image(Product__r.Image_URL__c, &quot;Product&quot;, 50,50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Case__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>If(  Recall__c ,  HYPERLINK(&quot;javascript:srcUp(&apos;/apex/Q_CreatePurchaseHistoryCase?isdtp=vw&amp;purchaseId=&quot; + Id + &quot;&apos;)&quot;, &quot;Log Case&quot;), &quot;&quot;)</formula>
        <label>Log Recall Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Recall__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>If( Recall__c , Image(&quot;/servlet/servlet.FileDownload?file=0150b000002e8gW&quot;, &quot;Product Recalled&quot;, 32,32), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Recall</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail IDO Custom Field</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Items</relationshipLabel>
        <relationshipName>Purchase_Itemsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_History__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Purchase</label>
        <referenceTo>Purchases__c</referenceTo>
        <relationshipLabel>Purchase Items</relationshipLabel>
        <relationshipName>Purchase_Itemsab</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Retail IDO Custom Field</description>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retail IDO Custom Field</description>
        <label>Recalled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PU in Store</fullName>
                </value>
                <value>
                    <fullName>Pending Shipment</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_Pickup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail IDO Custom Store Pickup Lookup Field</description>
        <label>Store</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.NTO_Store__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Items</relationshipLabel>
        <relationshipName>Purchase_Itemsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>Amount__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Purchase Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{YY}{MM}{DD}-{000}</displayFormat>
        <label>Purchase Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>